# compilers-coursework

./: CMakeLists.txt  Makefile  test
src/: ast.c  ast.h  codegen.c  codegen.h  error.c  error.h  ir.c  ir.h  lang.l  lang.y  main.c  syntax.y  vector.c  vector.h
